# UnderwaterRobotSystem

./: .gitignore  POOL_TEST_MAX_SPEED_AND_CONTROL_CHECKLIST.md  README.md  local_debug_commands.txt  matrix.docx
docs/: project_memory.md  (+4 more)
offline_nav/: README.md  pyproject.toml  requirements.txt
offline_nav/apps/diagnose/: eskf_adult.py  eskf_check.py
offline_nav/apps/tools/: dvl_diag_demo.py  imu_diag_demo.py
offline_nav/configs/: dataset.yaml  default.yaml  eskf.yaml  nav.yaml  快捷命令行.md  快捷检查.txt  第二组数据预处理检查.txt
offline_nav/data/2026-01-10_pooltest03/imu/: imu_raw_log_20260116_161919.csv  min_imu_tb_20260116_161919.csv
offline_nav/scripts/: diag_eskf2d_focus.py  make_traj_gif.py
offline_nav/src/nav/: frames.py
offline_nav/src/offnav/: cli_dvl.py  cli_nav.py  cli_proc.py  cli_raw.py  dev_imu_gravity_check.py  paths.py
offline_nav/src/offnav.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
offline_nav/src/offnav/algo/: __init__.py  deadreckon.py  eskf_audit.py  eskf_common.py  eskf_engine.py  eskf_local.py  eskf_measurements.py  eskf_runner.py  eskf_timeline.py  event_timeline.py  graph_runner.py
offline_nav/src/offnav/core/: nav_config.py  types.py
offline_nav/src/offnav/eskf/: __init__.py  cli_eskf.py  config.py  filter.py  io_csv.py  math_utils.py  metrics.py  monitor.py  runner.py
shared/: CMakeLists.txt
shared/msg/: control_intent.hpp  key_event.hpp  nav_state.hpp  nav_state_view.hpp  telemetry_frame_v2.hpp
shared/shm/: control_intent_shm.hpp  key_event_ring_shm.hpp  key_event_shm.hpp  nav_state_shm.hpp  nav_state_view_shm.hpp  telemetry_frame_v2_shm.hpp
(+131 files in other folders)
